# normal_ws

./: .gitignore  nav_map_save.pgm  nav_map_serial.data
src/arm_description/: CMakeLists.txt  package.xml
src/arm_description/config/: diff_drive_controller.yaml
src/arm_description/launch/: controller.yaml  gazebo.launch
src/arm_description/urdf/: spear_arm.urdf  spear_arm_1.urdf
src/field_description/: CMakeLists.txt  package.xml
src/field_description/config/: bridge.yaml  common_stereo.yaml  diff_drive_controller.yaml  final_config.rviz  four_wheeled_controller.yaml  map_config.rviz  mapper_params_online_async.yaml  my_map_1.rviz  nav2_params.yaml  nav_map_save.yaml  nav_map_save_1.pgm  r2_config.rviz  rbot_ekf_node.yaml  robocon_map1.rviz  rtabmap_1.rviz  slam_params.yaml  test_map_nav.pgm  test_map_nav.yaml  twist_mux.yaml
src/field_description/launch/: arena_map.launch.py  base_samp.launch.py  gazebo.launch.py  kuku_bot.launch.py  localization_launch.py  navigation_launch.py  r_bot.launch.py  test_bot_launch.py  track_launch.py
src/field_description/urdf/: arm.urdf  kuku_bot.urdf  lidar.urdf  r2.urdf  r2_base.urdf  r2_bot.sdf  r2_bot.urdf  r2_final_bot.urdf  r2_track.urdf  r_bot.urdf  three_pivot_arm.urdf  track.urdf  track_1.urdf  track_bot.urdf  track_example.urdf
src/field_description/worlds/: game_field.sdf  nav_world.sdf
src/kfs_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/kfs_arm_moveit_config/config/: arm.srdf  (+7 more)
src/r2_description/: CMakeLists.txt  package.xml
src/yolo_zed/: package.xml  setup.cfg  setup.py
(+19 files in other folders)
